syntax = "proto3";
package youliao.pdu.message;
import "youliao.base.proto";

message MessageData
{
    uint32 relate_id = 1;
    uint32 from_user_id = 2;
    uint32 to_user_id   = 3;
    uint32 msg_id       = 4;
    uint32 create_time  = 5;
    youliao.pdu.base.MessageType message_type = 6;
    bytes  message_data = 7;
    bytes  attach_data = 8;
}

//消息确认
message MessageDataAck
{
    uint32 from_user_id = 1;
    uint32 to_user_id   = 2;
    uint32 msg_id       = 3;
}

message LatestMsgIdRequest
{
    uint32 user_id = 1;
    uint32 friend_id = 2;
}

message LatestMsgIdRespone
{
    uint32 user_id = 1;
    uint32 friend_id = 2;
    uint32 latest_msg_id = 3;
}